conditions.Conditions.scala.code
if (estFaceMur()==true) {
  avcance();
} else {
  recule()
}